--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 				<li>
 					<a href="">CONTACT</a>
 				</li>
+				<img class="eli" src="images/eli1.svg">
 			</ul>
 			<h2>TRANDING</h2>
 		</nav>
@@ -29,15 +30,15 @@
 	</header>
 	<div class="container">
 	<section class="sec1">
-		 <section class="sec1">
+		<section class="sec1">
 	 			<img class="pic" src="images/pic1.jpg">
 	 			<h1>Dolore magna alicua</h1>
-	 			</section>
-	 			<section class="sec1">
+	 	</section>
+	 	<section class="sec1">
 				<img class="pic" src="images/pic2.jpg">
 			    <h1>Dolore magna alicua</h1>
-			    </section>
-			    <section class="sec1">
+	    </section>
+	    <section class="sec1">
 				<img class="pic" src="images/pic3.jpg">
 				<h1>Dolore magna alicua</h1>
 		 </section>
@@ -62,7 +63,7 @@
 		    <div class="div2">
 		    	 <section class="sec2">
 		    	<img class="pos" src="images/pic4.jpg">
-		    	<h1 class="tag">Morbi eleifend a libero</h1>
+		    	<p class="tag">Morbi eleifend a libero</p>
 		    	</section>
 		    	<img src="images/pic5.jpg">
 		    </div>
@@ -71,29 +72,31 @@
 		    	<img src="images/pic7.jpg">
 		    	<img src="images/pic8.jpg">
 		    </div>
-    </div>
+        </div>
             <div class="div4">
             	<div class="div5">
             		<h5>Home</h5>
-            		<h5>About</h5>
+            		<h6 class="about">About</h6>
             		<h5>Testimonials</h5>
+            		<h4>Stay with us in touch for the freshest products!</h4>
+            		<img class="logo" src="images/logo1.svg">
             	</div>
             	<div class="div6">
             		<h5>Discovery</h5>
-            		<h5>Help</h5>
+            		<h6 class="help">Help</h6>
             		<h5>Advertise</h5>
             	</div>
             	<div class="div7">
             		<h5>Photos</h5>
-            		<h5>Terms</h5>
+            		<h6 class="terms">Terms</h6>
             		<h5>Integrations</h5>
-            	</div>
+            		</div>
+            	
             	<div class="div8">
             		<h5>Contact</h5>
-            		<h5>Guidlines</h5>
+            		<h6 class="guidlines">Guidlines</h6>
             		<h5>Careers</h5>
             	</div>
-            	
             </div>
 </body>
 </html>
